# Detect-RACK-Project

./: .gitignore  CMakeLists.txt  README.md  Start_Dashboard  config.json  công việc tuần 1.txt  index.html  install_service.sh  launcher.cpp  main.cpp  mediamtx.yml  setup.sh  start.sh  text.txt  textfix.txt
DetectRackProject/: CMakeLists.txt  index.html  main.cpp
DetectRackProject/cmake/: Findlibmodbus.cmake
include/: CameraStream.hpp  RegionMonitor.hpp  YOLOv8Detector.hpp
src/: CameraStream.cpp  RegionMonitor.cpp  YOLOv8Detector.cpp
weights/: best-sim.onnx  best.onnx
